[package]
name = "wei-mcp-test"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors"] }
futures = "0.3.30"
tokio-stream = "0.1.14"
chrono = "0.4.34"
serde_json = "1.0.114"
